--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <!----------------------- Header ----------------------->
+
     <header class="page-header">
       <div class="container">
         <nav class="page-nav">
@@ -58,9 +59,12 @@
         </address>
       </div>
     </header>
+
     <!-------------------- Page Content -------------------->
+
     <main>
       <!-------------------- Hero -------------------->
+
       <section class="hero section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
@@ -73,7 +77,9 @@
           </button>
         </div>
       </section>
+
       <!-------------------- About Us -------------------->
+
       <section class="about section">
         <div class="container">
           <h2 class="visually-hidden section-title">About us</h2>
@@ -129,7 +135,9 @@
           </ul>
         </div>
       </section>
+
       <!----------------- What are we doing ----------------->
+
       <section class="product section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
@@ -161,7 +169,9 @@
           </ul>
         </div>
       </section>
+
       <!-------------------- Our Team -------------------->
+
       <section class="team section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
@@ -441,10 +451,12 @@
           </ul>
         </div>
       </section>
+
+      <!-------------------- Customers -------------------->
+
       <section class="customers section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
-          <!-- ul.customers-list>li.customers-item*6>a.customers-link>svg.customers-icon>use -->
           <ul class="customers-list list">
             <li class="customers-item">
               <a
@@ -522,7 +534,9 @@
         </div>
       </section>
     </main>
+
     <!-------------------- Footer -------------------->
+
     <footer class="page-footer section">
       <div class="container">
         <div class="footer-logo-box">
@@ -613,9 +627,10 @@
         </form>
       </div>
     </footer>
+
     <!-------------------- Modal -------------------->
-    <!-- TODO add is-hidden before push -->
-    <div class="modal-container" data-modal>
+
+    <div class="modal-container is-hidden" data-modal>
       <div class="modal-body">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -624,14 +639,15 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <div class="input-wrapper">
+          <div class="modal-input-wrapper">
             <label class="modal-label" for="user-name">Name</label>
-            <div class="input-box">
+            <div class="modal-input-box">
               <input
-                class="modal-input"
+                class="modal-input modal-input-area"
                 type="text"
                 name="user-name"
                 id="user-name"
+                required
               />
               <svg class="modal-input-icon" width="18" height="18">
                 <use href="./images/icons.svg#person-icon"></use>
@@ -639,14 +655,15 @@
             </div>
           </div>
 
-          <div class="input-wrapper">
+          <div class="modal-input-wrapper">
             <label class="modal-label" for="user-tel">Phone</label>
-            <div class="input-box">
+            <div class="modal-input-box">
               <input
-                class="modal-input"
+                class="modal-input modal-input-area"
                 type="tel"
                 name="user-tel"
                 id="user-tel"
+                required
               />
               <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#phone-icon"></use>
@@ -654,11 +671,11 @@
             </div>
           </div>
 
-          <div class="input-wrapper">
+          <div class="modal-input-wrapper">
             <label class="modal-label" for="user-mail">Email</label>
-            <div class="input-box">
+            <div class="modal-input-box">
               <input
-                class="modal-input"
+                class="modal-input modal-input-area"
                 type="email"
                 name="user-mail"
                 id="user-mail"
@@ -669,20 +686,43 @@
             </div>
           </div>
 
-          <div class="input-wrapper">
+          <div class="modal-textarea-wrapper">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
-              class="modal-input"
+              class="modal-textarea modal-input-area"
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
 
+          <div class="modal-check-wrapper">
+            <input
+              class="modal-check-input visually-hidden"
+              type="checkbox"
+              name="user-conditions"
+              value="confirm"
+              id="user-conditions"
+              required
+            />
+            <label class="modal-check-label modal-label" for="user-conditions">
+              <span class="modal-custom-checkbox">
+                <svg class="modal-custom-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#check-mark-icon "></use>
+                </svg>
+              </span>
+              <span class="user-conditions-text">
+                I accept the terms and conditions of the
+                <a href="" class="user-conditions-link">Privacy Policy</a>
+              </span></label
+            >
+          </div>
+
           <button class="btn btn-primary modal-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
+
     <!-- !------------------ JS Files -------------------->
     <script src="./js/modal.js"></script>
   </body>
