--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         </div>
         <!-- Footer Socials -->
         <div class="footer-socials-box">
-          <p class="text">Social media</p>
+          <p class="text footer-box-title">Social media</p>
           <ul class="footer-socials-list list">
             <li class="footer-socials-item">
               <a
@@ -607,24 +607,26 @@
           </ul>
         </div>
         <!-- Subscribe form -->
-        <form class="subscribe-form">
-          <label class="subscribe-label text" for="email-subscribe"
-            >Subscribe</label
-          >
-          <input
-            class="subscibe-input"
-            type="email"
-            name="subscibe-email"
-            id="email-subscribe"
-            placeholder="E-mail"
-          />
-          <button class="subscribe-btn btn" type="submit">
-            Subscribe
-            <svg class="subscribe-icon" width="24" height="24">
-              <use href="./images/icons.svg#send-icon"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="footer-subscribe-box">
+          <p class="text footer-box-title">Subscribe</p>
+          <form class="subscribe-form">
+            <label aria-label="subscribe with your email">
+              <input
+                class="subscibe-input"
+                type="email"
+                name="subscibe-email"
+                id="email-subscribe"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-btn btn" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#send-icon"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
