--- a/index.html
+++ b/index.html
@@ -610,13 +610,17 @@
         <div class="footer-subscribe-box">
           <p class="text footer-box-title">Subscribe</p>
           <form class="subscribe-form">
-            <label aria-label="subscribe with your email">
+            <label
+              class="subscribe-label screenread-only"
+              aria-label="subscribe with your email"
+            >
               <input
                 class="subscibe-input"
                 type="email"
                 name="subscibe-email"
                 id="email-subscribe"
                 placeholder="E-mail"
+                required
               />
             </label>
             <button class="subscribe-btn btn" type="submit">
@@ -651,7 +655,7 @@
                 id="user-name"
                 required
               />
-              <svg class="modal-input-icon" width="18" height="18">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#person-icon"></use>
               </svg>
             </div>
@@ -681,6 +685,7 @@
                 type="email"
                 name="user-mail"
                 id="user-mail"
+                required
               />
               <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#email-icon"></use>
@@ -702,22 +707,25 @@
             <input
               class="modal-check-input visually-hidden"
               type="checkbox"
-              name="user-conditions"
-              value="confirm"
-              id="user-conditions"
+              name="user-privacy"
+              value="true"
+              id="user-privacy"
               required
             />
-            <label class="modal-check-label modal-label" for="user-conditions">
+            <label class="modal-check-label modal-label" for="user-privacy">
               <span class="modal-custom-checkbox">
                 <svg class="modal-custom-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#check-mark-icon "></use>
                 </svg>
               </span>
-              <span class="user-conditions-text">
+              I accept the terms and conditions of the
+              <a href="" class="user-conditions-link">Privacy Policy</a>
+              <!-- TODO return after autocheck complete  -->
+              <!-- <span class="user-conditions-text">
                 I accept the terms and conditions of the
                 <a href="" class="user-conditions-link">Privacy Policy</a>
-              </span></label
-            >
+              </span> -->
+            </label>
           </div>
 
           <button class="btn btn-primary modal-btn" type="submit">Send</button>
