--- a/index.html
+++ b/index.html
@@ -718,13 +718,13 @@
                   <use href="./images/icons.svg#check-mark-icon "></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a href="" class="user-conditions-link">Privacy Policy</a>
+              <!-- I accept the terms and conditions of the
+              <a href="" class="user-conditions-link">Privacy Policy</a> -->
               <!-- TODO return after autocheck complete  -->
-              <!-- <span class="user-conditions-text">
+              <span class="user-conditions-text">
                 I accept the terms and conditions of the
                 <a href="" class="user-conditions-link">Privacy Policy</a>
-              </span> -->
+              </span>
             </label>
           </div>
 
